Fix text overflow not displaying, add 2 items

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ p {
     line-height: 1.3em;
     margin: 0;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: break-spaces;
     margin: 0;
     letter-spacing: 0.05em;
     animation: typing 0.5s steps(30, end);
